# central_hotel

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 34fb410cf2d1_add_check_constraint_promotions_.py  3b4a25aa8d18_add_hotel_management_tables.py  6cb1475686a0_add_user_table.py  96e5f65ae4e8_add_rentals_amenities_tables.py  a221517fa56b_initial_empty.py  d269d1374ea6_add_bookings_table.py  f91ad3614578_add_billing_tables.py
app/: main.py  models.py
app/amenities/: models.py  router.py  schemas.py  service.py  tasks.py
app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
app/billing/: dependencies.py  models.py  router.py  service.py
app/bookings/: models.py  router.py  schemas.py  service.py  tasks.py
app/core/: base.py  celery_app.py  config.py  database.py  templates.py
app/dashboard/: router.py
app/hotels/: models.py  router.py  schemas.py  service.py
app/rentals/: models.py  router.py  schemas.py  service.py  tasks.py
app/templates/: base.html
app/widget/: router.py  service.py
nginx/: nginx.conf
scripts/: create-multiple-dbs.sh  init-test-db.sql  seed_plans.py
tests/: conftest.py
tests/amenities/: factories.py  test_availability.py  test_routes.py  test_service.py
tests/auth/: factories.py  test_auth.py  test_dependencies.py  test_models.py  test_oauth.py  test_security.py  test_service.py
tests/billing/: factories.py  helpers.py  test_billing_routes.py  test_models.py  test_service.py  test_webhooks.py
(+46 files in other folders)
